# Y86_2

./: README.md  report.docx
Y86_2_Andriod/app/: build.gradle
Y86_2_Andriod/app/src/androidTest/java/com/example/aaron/y86_2_andriod/: ExampleInstrumentedTest.java
Y86_2_Andriod/app/src/main/: AndroidManifest.xml
Y86_2_Andriod/app/src/main/res/layout/: activity_pipe_line.xml
Y86_2_Andriod/app/src/main/res/values/: strings.xml
Y86_2_Andriod/gradle/wrapper/: gradle-wrapper.properties
Y86_2_PC/: Y86_2_PC.pro  assembler.cpp  assembler.h  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  parameter.h  parser.cpp  parser.h
android socketTest/: import-summary.txt  local.properties
android socketTest/app/: build.gradle
android socketTest/app/src/main/: AndroidManifest.xml
android socketTest/app/src/main/java/com/example/sockettest001/: Employee.java  MainActivity.java
android socketTest/app/src/main/res/layout/: activity_main.xml
android socketTest/app/src/main/res/values/: strings.xml
build-Y86_2_PC-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  Y86_2_PC  moc_mainwindow.cpp  out.yo  qrc_background.cpp  ui_mainwindow.h
kernel/: ALU.cpp  Assembler.cpp  Assembler.h  CMakeCache.txt  CMakeLists.txt  Makefile  MemFile.cpp  MemFile.h  RegFile.h  Stage.cpp  Stage.h  cmake_install.cmake  kernel  main.cpp  server.cpp
server/: ALU.h  CMakeCache.txt  CMakeLists.txt  Makefile  MemFile.cpp  RegFile.cpp  Stage.cpp  server  server.cpp
src/: OpStage.cpp  RegStage.cpp
(+2 files in other folders)
